--- a/.github/workflows/workflow-that-creates-an-artifact.yml
+++ b/.github/workflows/workflow-that-creates-an-artifact.yml
@@ -16,5 +16,5 @@ jobs:
     - name: upload artifact
       uses: actions/upload-artifact@v4
       with:
-        name: linux
+        name: theReadmeFile
         path: ${{env.ARTIFACT_FILE_NAME}}
